<resources>
    <string name="app_name">DoctorPoint</string>
    <string name="onboarding_title1">Thousands of doctors</string>
    <string name="onboarding_title2">Live talk with doctor</string>
    <string name="onboarding_title3">Chat with doctors</string>
    <string name="onboarding_message1">Access thousands of Doctors instantly.You can easily contact with the doctors and contact for your needs.</string>
    <string name="onboarding_message2">Easily connect with doctor and start video chat for your better treatment &amp; Prescription.</string>
    <string name="onboarding_message3">Book an appointment with doctor. Chat with doctor via appointment letter. Get consultant.</string>
    <string name="skip_now">skip now</string>
    <string name="dynamic_id_binder">%s</string>
    <string name="get_started">Get started</string>
    <string name="create_an_account">create an account</string>
    <string name="create_a_free_account">Create a free account</string>
    <string name="sign_in">sign in</string>
    <string name="email">Email</string>
    <string name="email_icon">Email icon</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="password">password</string>
    <string name="password_icon">password icon</string>
    <string name="sign_in_btn_txt">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="create_account">Create account</string>
</resources>