<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="mViewModel"
            type="com.elfarsisy.doctorpoint.feature.authentication.startauth.viewmodel.StartAuthViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_bg"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/dp200w"
            android:layout_height="@dimen/dp200h"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20h"
            android:text="@string/create_a_free_account"
            android:textAlignment="center"
            android:fontFamily="@font/gilroy_regular"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/title_xxlarge" />

        <Button
            android:id="@+id/button"
            style="@style/button_green"
            android:layout_marginHorizontal="@dimen/dp30w"
            android:layout_marginTop="@dimen/dp50h"
            android:text="@string/create_an_account" />

        <Button
            style="@style/button_white"
            android:layout_marginHorizontal="@dimen/dp30w"
            android:layout_marginTop="@dimen/dp20h"
            android:text="@string/sign_in" />
    </LinearLayout>
</layout>