<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="mViewModel"
            type="com.elfarsisy.doctorpoint.feature.authentication.signin.viewmodel.SignInViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/dp150w"
            android:layout_height="@dimen/dp150h"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24w"
            android:layout_marginTop="@dimen/dp16h"
            android:contentDescription="@string/email_icon"
            android:src="@drawable/ic_mail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16h"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/email"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/sp16"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp24w"
            android:layout_marginTop="@dimen/dp10h"
            android:fontFamily="@font/gilroy_regular"
            android:hint="@string/example_gmail_com"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24w"
            android:layout_marginTop="@dimen/dp16h"
            android:contentDescription="@string/password_icon"
            android:src="@drawable/ic_locker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16h"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/password"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/sp16"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp24w"
            android:layout_marginTop="@dimen/dp10h"
            android:fontFamily="@font/gilroy_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/button"
            style="@style/button_green"
            android:layout_marginHorizontal="@dimen/dp30w"
            android:layout_marginTop="@dimen/dp24h"
            android:text="@string/sign_in_btn_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <TextView
            android:id="@+id/forgetPasswordTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/forgot_password"
            android:textColor="@color/gray"
            android:textSize="@dimen/sp16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24w"
            android:layout_marginTop="@dimen/dp24h"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/or_sign_in_with"
            android:textColor="@color/gray"
            android:textSize="@dimen/sp16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgetPasswordTxt" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/dp20w"
            android:layout_marginEnd="@dimen/dp24w"
            android:background="@color/divider_color"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <ImageView
            android:id="@+id/facebook_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24w"
            android:layout_marginTop="@dimen/dp20h"
            android:src="@drawable/ic_facebook"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ImageView
            android:id="@+id/google_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20w"
            android:layout_marginTop="@dimen/dp20h"
            android:src="@drawable/ic_google"
            app:layout_constraintStart_toEndOf="@+id/facebook_imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ImageView
            android:id="@+id/twitter_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20w"
            android:layout_marginTop="@dimen/dp20h"
            android:src="@drawable/ic_twitter"
            app:layout_constraintStart_toEndOf="@+id/google_imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ImageView
            android:id="@+id/instagram_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20w"
            android:layout_marginTop="@dimen/dp20h"
            android:src="@drawable/ic_instagram"
            app:layout_constraintStart_toEndOf="@+id/twitter_imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/accountTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20h"
            android:fontFamily="@font/gilroy_regular"
            android:text="Haven’t any account?"
            android:textColor="@color/gray"
            android:textSize="@dimen/sp16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/createAccountTxt"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/google_imageView" />

        <TextView
            android:id="@+id/createAccountTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10w"
            android:layout_marginTop="@dimen/dp20h"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/create_account"
            android:textColor="@color/green"
            android:textSize="@dimen/sp16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/accountTxt"
            app:layout_constraintTop_toBottomOf="@+id/google_imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>